<resources>
    <string name="app_name">Transfomers Fight Club</string>
    <string name="menu_item_battle">Start Battle</string>
    <string name="snackbar_empty">Add some transformers first</string>
    <string name="listitem_allegience_autobot">Autobot</string>
    <string name="listitem_allegience_decepticon">Decepticon</string>
    <string name="listitem_strength">Strength</string>
    <string name="listitem_intelligence">Intelligence</string>
    <string name="listitem_speed">Speed</string>
    <string name="listitem_endurance">Endurance</string>
    <string name="listitem_rank">Rank</string>
    <string name="listitem_courage">Courage</string>
    <string name="listitem_firepower">Firepower</string>
    <string name="listitem_skill">Skill</string>
    <string name="listItem_rating">RATING</string>
    <string name="url_image_hero">https://i.pinimg.com/originals/fc/1c/f6/fc1cf6acc84ad1dc76c62be24e19409f.jpg</string>
    <string name="activity_selection_title">Fighter Selection</string>
    <string name="activity_selection_subtitle">Select a transformer</string>
    <string name="team_text_1">Autobots</string>
    <string name="team_text_2">Decepticons</string>
    <string name="listitem_transformer_subtitle_placeholder">Allegience</string>
    <string name="listitem_transformer_title_placeholder">TRANSFORMER</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="saved">Saved</string>
    <string name="added">added</string>
    <string name="no_internet_connection">No internet connection detected. Please connect to the internet to complete action.</string>
    <string name="title_activity_battle">BattleActivity</string>
    <string name="battle_tab_text_1">Winners</string>
    <string name="battle_tab_text_2">Survivors</string>
    <string name="battle_results_title">Battle results</string>
    <string name="battle_results_subtitle">And the winners are...</string>
    <string-array name="array_attribute_level">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>